// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls-Input/RadioGroupConnected Direction 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo_fixedWidth400 tw-flex tw-flex-col"
  >
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            direction = vertical
          </div>
          
        </div>
      </a>
      <div
        class="controls_toggle_theme-default controls-GroupRadio controls-GroupRadio_enabled  "
        tabindex="0"
      >
        <div
          class="controls-invalid-container "
        >
          <div
            class="controls-RadioGroup__wrapper_vertical controls-RadioGroup__wrapper_vertical_line"
            tabindex="0"
          >
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical-padding controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Первый
              </span>
            </span>
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Второй
              </span>
            </span>
          </div>
          <div
            class=""
          />
        </div>
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            direction = horizontal
          </div>
          
        </div>
      </a>
      <div
        class="controls_toggle_theme-default controls-GroupRadio controls-GroupRadio_enabled  "
        tabindex="0"
      >
        <div
          class="controls-invalid-container "
        >
          <div
            class="controls-RadioGroup__wrapper_horizontal controls-RadioGroup__wrapper_horizontal_multiline"
            tabindex="0"
          >
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_horizontal-padding controls-RadioItem__wrapper  undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Первый
              </span>
            </span>
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_horizontal controls-RadioItem__wrapper  undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Второй
              </span>
            </span>
          </div>
          <div
            class=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Controls-Input/RadioGroupConnected Variants 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo_fixedWidth400 tw-flex tw-flex-col"
  >
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            variants
          </div>
          
        </div>
      </a>
      <div
        class="controls_toggle_theme-default controls-GroupRadio controls-GroupRadio_enabled  "
        tabindex="0"
      >
        <div
          class="controls-invalid-container "
        >
          <div
            class="controls-RadioGroup__wrapper_vertical controls-RadioGroup__wrapper_vertical_line"
            tabindex="0"
          >
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical-padding controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                1
              </span>
            </span>
            <span
              class=" js-controls-RaidoItem__wrapper__selected controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_selected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_selected_enabled"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_selected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                2
              </span>
            </span>
            <div
              class="controls-invalid-container controls-RadioGroup__childGroup"
            >
              <div
                class="controls-RadioGroup__wrapper_vertical controls-RadioGroup__wrapper_vertical_line"
                tabindex="0"
              >
                <span
                  class=" js-controls-RaidoItem__wrapper__selected controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
                  tabindex="0"
                >
                  <div
                    class="controls-RadioItem__RadioCircle"
                  >
                    <svg
                      class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                      data-name="Слой 1"
                      id="Слой_1"
                      viewBox="0 0 12 12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_selected"
                        cx="6"
                        cy="6"
                        r="5.5"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      <rect
                        class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_selected_enabled"
                        height="8"
                        rx="4"
                        ry="4"
                        width="8"
                        x="2"
                        xmlns="http://www.w3.org/2000/svg"
                        y="2"
                      />
                    </svg>
                  </div>
                  <span
                    class="controls-RadioItem__caption_selected_enabled controls-RadioItem__caption ws-ellipsis"
                    tabindex="0"
                  >
                    3
                  </span>
                </span>
              </div>
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          />
        </div>
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            Variants is empty
          </div>
          
        </div>
      </a>
      <div
        class="controls_toggle_theme-default controls-GroupRadio controls-GroupRadio_enabled  "
        tabindex="0"
      >
        <div
          class="controls-invalid-container "
        >
          <div
            class="controls-RadioGroup__wrapper_vertical controls-RadioGroup__wrapper_vertical_line"
            tabindex="0"
          >
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical-padding controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Первый
              </span>
            </span>
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Второй
              </span>
            </span>
          </div>
          <div
            class=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Controls-Input/RadioGroupConnected WrapText 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo_fixedWidth400 tw-flex tw-flex-col"
  >
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            WrapText = true
          </div>
          
        </div>
      </a>
      <div
        class="controls_toggle_theme-default controls-GroupRadio controls-GroupRadio_enabled  "
        tabindex="0"
      >
        <div
          class="controls-invalid-container "
        >
          <div
            class="controls-RadioGroup__wrapper_vertical controls-RadioGroup__wrapper_vertical_multiline"
            tabindex="0"
          >
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical-padding controls-RadioItem__wrapper  undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption"
                tabindex="0"
              >
                very very over very long long long long text for testing option wrapText
              </span>
            </span>
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical-padding controls-RadioItem__wrapper  undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption"
                tabindex="0"
              >
                normal text
              </span>
            </span>
            <span
              class=" js-controls-RaidoItem__wrapper__selected controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical controls-RadioItem__wrapper  undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_selected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_selected_enabled"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_selected_enabled controls-RadioItem__caption"
                tabindex="0"
              >
                normal text 2
              </span>
            </span>
          </div>
          <div
            class=""
          />
        </div>
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            WrapText = false
          </div>
          
        </div>
      </a>
      <div
        class="controls_toggle_theme-default controls-GroupRadio controls-GroupRadio_enabled  "
        tabindex="0"
      >
        <div
          class="controls-invalid-container "
        >
          <div
            class="controls-RadioGroup__wrapper_vertical controls-RadioGroup__wrapper_vertical_line"
            tabindex="0"
          >
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical-padding controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                very very over very long long long long text for testing option wrapText
              </span>
            </span>
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical-padding controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                normal text
              </span>
            </span>
            <span
              class=" js-controls-RaidoItem__wrapper__selected controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_selected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_selected_enabled"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_selected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                normal text 2
              </span>
            </span>
          </div>
          <div
            class=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Controls-Input/RadioGroupConnected label 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo_fixedWidth300 tw-flex tw-flex-col"
  >
    <div
      class="controls_toggle_theme-default controls-GroupRadio controls-GroupRadio_enabled  controls-margin_top-m controls-margin_top-m controls-Input-connected_filled tw-w-full"
      tabindex="0"
    >
      <div
        class="controls-invalid-container "
      >
        <div
          class="controls-RadioGroup__wrapper_vertical controls-RadioGroup__wrapper_vertical_line"
          tabindex="0"
        >
          <span
            class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical-padding controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
            tabindex="0"
          >
            <div
              class="controls-RadioItem__RadioCircle"
            >
              <svg
                class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                data-name="Слой 1"
                id="Слой_1"
                viewBox="0 0 12 12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                  cx="6"
                  cy="6"
                  r="5.5"
                  xmlns="http://www.w3.org/2000/svg"
                />
                <rect
                  class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                  height="8"
                  rx="4"
                  ry="4"
                  width="8"
                  x="2"
                  xmlns="http://www.w3.org/2000/svg"
                  y="2"
                />
              </svg>
            </div>
            <span
              class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
              tabindex="0"
            >
              Первый
            </span>
          </span>
          <span
            class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
            tabindex="0"
          >
            <div
              class="controls-RadioItem__RadioCircle"
            >
              <svg
                class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                data-name="Слой 1"
                id="Слой_1"
                viewBox="0 0 12 12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                  cx="6"
                  cy="6"
                  r="5.5"
                  xmlns="http://www.w3.org/2000/svg"
                />
                <rect
                  class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                  height="8"
                  rx="4"
                  ry="4"
                  width="8"
                  x="2"
                  xmlns="http://www.w3.org/2000/svg"
                  y="2"
                />
              </svg>
            </div>
            <span
              class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
              tabindex="0"
            >
              Второй
            </span>
          </span>
        </div>
        <div
          class=""
        />
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-col controls-margin_top-m controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            label top
          </div>
          
        </div>
      </a>
      <div
        class="controls_toggle_theme-default controls-GroupRadio controls-GroupRadio_enabled  controls-margin_top-m"
        tabindex="0"
      >
        <div
          class="controls-invalid-container "
        >
          <div
            class="controls-RadioGroup__wrapper_vertical controls-RadioGroup__wrapper_vertical_line"
            tabindex="0"
          >
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical-padding controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Первый
              </span>
            </span>
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Второй
              </span>
            </span>
          </div>
          <div
            class=""
          />
        </div>
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-row tw-items-baseline controls-margin_top-m controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0 tw-flex-shrink"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            label start
          </div>
          
        </div>
      </a>
      <div
        class="controls_toggle_theme-default controls-GroupRadio controls-GroupRadio_enabled  controls-input_label_min-input-content controls-margin_top-m"
        tabindex="0"
      >
        <div
          class="controls-invalid-container "
        >
          <div
            class="controls-RadioGroup__wrapper_vertical controls-RadioGroup__wrapper_vertical_line"
            tabindex="0"
          >
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical-padding controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Первый
              </span>
            </span>
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Второй
              </span>
            </span>
          </div>
          <div
            class=""
          />
        </div>
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-row tw-items-baseline controls-margin_top-m controls-Input-connected_filled"
    >
      <span
        class="controls-icon_size-s controls-icon_style-secondary icon-SabyBird controls-icon controls-margin_right-s"
      />
      <div
        class="controls_toggle_theme-default controls-GroupRadio controls-GroupRadio_enabled  controls-margin_top-m"
        tabindex="0"
      >
        <div
          class="controls-invalid-container "
        >
          <div
            class="controls-RadioGroup__wrapper_vertical controls-RadioGroup__wrapper_vertical_line"
            tabindex="0"
          >
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical-padding controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Первый
              </span>
            </span>
            <span
              class=" controls-RadioItem__wrapper_enabled controls-RadioGroup_defaultItem_vertical controls-RadioItem__wrapper ws-flex-shrink-0 undefined "
              tabindex="0"
            >
              <div
                class="controls-RadioItem__RadioCircle"
              >
                <svg
                  class="controls_toggle_theme-default controls-RadioCircle__svg controls-RadioItem__RadioCircle_captionPosition-end"
                  data-name="Слой 1"
                  id="Слой_1"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="controls-RadioCircle__borderCircle controls-RadioCircle__borderCircle_enabled controls-RadioCircle__borderCircle_unselected"
                    cx="6"
                    cy="6"
                    r="5.5"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <rect
                    class="controls-RadioCircle__innerCircle controls-RadioCircle__innerCircle_unselected"
                    height="8"
                    rx="4"
                    ry="4"
                    width="8"
                    x="2"
                    xmlns="http://www.w3.org/2000/svg"
                    y="2"
                  />
                </svg>
              </div>
              <span
                class="controls-RadioItem__caption_unselected_enabled controls-RadioItem__caption ws-ellipsis"
                tabindex="0"
              >
                Второй
              </span>
            </span>
          </div>
          <div
            class=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
